--- a/src/main/resources/templates/dash/dash.html
+++ b/src/main/resources/templates/dash/dash.html
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mx-0 mb-3 p-0 text-center rounded-4" style="width: 100%;">
+                    <div class="mx-0 mb-3 p-0 ps-3 text-center rounded-4" style="width: 100%;">
                         <div class="row mx-0 pe-0">
                             <div class="row">
                                 <div class="mt-2">
@@ -84,35 +84,35 @@
 
                             <div class="row">
                                 <div class="col-md my-2">
-                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                    <div class="p-1 fw-bold fs-5 rounded-4  lightMode">
                                         <p id="audiencia"></p>
                                         <p>Audiência</p>
                                     </div>
                                 </div>
 
                                 <div class="col-md my-2">
-                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                    <div class="p-1 fw-bold fs-5 rounded-4  lightMode">
                                         <p id="impacto"></p>
                                         <p>Impactos</p>
                                     </div>
                                 </div>
 
                                 <div class="col-md my-2">
-                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                    <div class="p-1 fw-bold fs-5 rounded-4  lightMode">
                                         <p id="freq"></p>
                                         <p>Frequência</p>
                                     </div>
                                 </div>
 
                                 <div class="col-md my-2">
-                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                    <div class="p-1 fw-bold fs-5 rounded-4  lightMode">
                                         <p id="medDia"></p>
                                         <p>Dias monitorados</p>
                                     </div>
                                 </div>
 
                                 <div class="col-md my-2">
-                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                    <div class="p-1 fw-bold fs-5 rounded-4  lightMode">
                                         <p id="locais"></p>
                                         <p>N° Locais</p>
                                     </div>
@@ -121,10 +121,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mx-0 p-0">
+                    <div class="mx-0 p-0 ps-3 ">
                         <div class="mx-0 p-0 row flex-grow-1">
                             <div class="col-md ">
-                                <div id="container1" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div id="container1" class="my-2 p-2 text-center rounded-4  lightMode">
                                     <div class="p-1">
                                         <p>Análise Diária Audiência X Impactos</p>
                                     </div>
@@ -137,7 +137,7 @@
                             </div>
 
                             <div class="col-md ">
-                                <div id="container2" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div id="container2" class="my-2 p-2 text-center rounded-4  lightMode">
                                     <div class="px-4 maxHeight overflow-auto">
                                         <div class="minHeight" id="grafico3Container">
                                             <!--<canvas width="13px" height="80px" id="grafico3" class=""></canvas>-->
@@ -162,7 +162,7 @@
 
                         <div class="mx-0 p-0 row flex-grow-1">
                             <div class="col-md ">
-                                <div id="container3" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div id="container3" class="my-2 p-2 text-center rounded-4  lightMode">
                                     <div class="p-1">
                                         <p>Análise Semana Audiência X Impactos</p>
                                     </div>
@@ -172,7 +172,7 @@
                                 </div>
                             </div>
                             <div class="col-md ">
-                                <div id="container4" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div id="container4" class="my-2 p-2 text-center rounded-4  lightMode">
                                     <!--<div class="px-4 overflow-auto">-->
                                     <div class="px-4">
                                         <div class="minHeight">
