--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -16,7 +16,6 @@
   <script th:src="@{/js/menu.js}" type="text/javascript"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
-  <script th:src="@{/js/validationUsuario.js}" type="text/javascript"></script>
   <script th:src="@{/js/bootstrap/bootstrap.bundle.js}" type="text/javascript"></script>
 
   <title id="Title">Usuário</title>
@@ -27,8 +26,8 @@
 
   <div id="page-content-wrapper row">
     <!--BODY da página-->
-    <div class="col">
-      <div class="p-4 lightMode">
+    <div class="m-4 pt-4">
+      <div class="p-4 rounded-4 lightMode">
 
         <form class="needs-validation" novalidate>
 
@@ -46,7 +45,8 @@
           <div class="form-row">
             <div class="col-md mb-3">
               <label for="validationNome">Nome (Obrigatório)</label>
-              <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome" data-bs-content="Escolha um nome para o Usuário">?</button>
+              <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                data-bs-content="Escolha um nome para o Usuário">?</button>
               <input type="text" class="form-control lightMode" id="validationNome" placeholder="Nome" required>
               <div class="valid-feedback">
                 Nome válido!
@@ -60,7 +60,8 @@
             <div class="form-row" novalidate>
               <div class="col-md mb-3">
                 <label for="validationEmail">E-mail (Obrigatório)</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome" data-bs-content="Coloque o email utilizado pelo funcionário">?</button>
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                  data-bs-content="Coloque o email utilizado pelo funcionário">?</button>
                 <input type="text" class="form-control lightMode" id="validationEmail" placeholder="exemplo@email.com"
                   required>
                 <div class="valid-feedback">
@@ -74,7 +75,8 @@
 
               <div class="col-md mb-3">
                 <label for="validationSenha">Senha (Obrigatório)</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome" data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                  data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
                 <input type="password" class="form-control lightMode" id="validationSenha" placeholder="********"
                   required>
                 <div class="valid-feedback">
@@ -88,7 +90,8 @@
 
               <div class="col-md mb-3">
                 <label for="validationSenhaConf">Confirmação da Senha (Obrigatório)</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome" data-bs-content="A confirmação de senha deve ser igual a senha digitada">?</button>
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                  data-bs-content="A confirmação de senha deve ser igual a senha digitada">?</button>
                 <input type="password" class="form-control lightMode" id="validationSenhaConf" placeholder="********"
                   required>
                 <div class="valid-feedback">
@@ -103,7 +106,8 @@
 
             <div class="col-md mb-3">
               <label for="validationCelular">Celular</label>
-              <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome" data-bs-content="Colocar o telefone de contato caso necessário">?</button>
+              <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                data-bs-content="Colocar o telefone de contato caso necessário">?</button>
               <div class="input-group">
                 <span class="input-group-text lightMode" id="inputGroupPrepend3">+55</span>
                 <input type="text" class="form-control lightMode" id="validationCelular" placeholder="(12) 12345-6789"
@@ -120,7 +124,8 @@
             <div class="form-row">
               <div class="col-md mb-3">
                 <label for="validationAtuacao">Atuação</label>
-                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome" data-bs-content="Colocar uma descrição da atuação do usuário para facilitar o gerenciamento posterior">?</button>
+                <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                  data-bs-content="Colocar uma descrição da atuação do usuário para facilitar o gerenciamento posterior">?</button>
                 <input type="text" class="form-control lightMode" id="validationAtuacao"
                   placeholder="Gerente de Marketing">
                 <div class="valid-feedback">
