--- a/src/main/resources/templates/clients/cadastroCliente.html
+++ b/src/main/resources/templates/clients/cadastroCliente.html
@@ -18,33 +18,35 @@
 </head>
 
 <body id="body-pd">
-    <div th:insert="components/menuTamplate :: menuTamplate(tela='cliente')"></div><!--MENU-->
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='cliente')"></div>
+    <!--MENU-->
 
     <div class="ms-5" id="page-content-wrapper">
         <!--BODY da página-->
         <div class="pt-3">
             <div class="p-4 border lightMode">
 
-                <form  class="needs-validation" action="#" th:object="${usuario}" th:action="@{/cadastroCliente/save}"
-                method="post" novalidate>
+                <form class="needs-validation" action="#" th:object="${empresa}" th:action="@{/cadastroCliente/save}"
+                    method="post" novalidate>
 
                     <div class="form-row">
                         <h1>Cadastro de Cliente</h1>
                     </div>
 
-                    <div class="form-check p-3">
+                    <!--<div class="form-check p-3">
                         <input checked class="form-check-input " type="checkbox" id="ativoCheckBox">
-                        <label class="form-check-label" for="ativoCheckBox">
+                        <label class="form-check-label" for="ativoCheckBox" th:field="*{isAtivo}">
                             Ativo
                         </label>
                     </div>
+                -->
 
                     <div class="form-row">
                         <div class="col-md-4 mb-3">
                             <label for="nomeFantasia">Nome Fantasia</label>
                             <!--is-valid-->
                             <input type="text" class="form-control lightMode" id="nomeFantasia" placeholder="Empresa..."
-                                required>
+                                th:field="*{empresa.nomeFantasia}" required>
                             <div class="valid-feedback">
                                 Nome válido!
                             </div>
@@ -60,7 +62,7 @@
                             <label for="nomeRasaoSocial">Nome Razão Social</label>
                             <!--is-valid-->
                             <input type="text" class="form-control lightMode" id="nomeRasaoSocial"
-                                placeholder="Empresa..." required>
+                                placeholder="Empresa..." th:field="*{empresa.nomeRazaoSocial}" required>
                             <div class="valid-feedback">
                                 Nome válido!
                             </div>
@@ -76,7 +78,7 @@
                             <label for="validationCNPJ">CNPJ</label>
                             <!--is-valid-->
                             <input type="text" class="form-control lightMode" id="validationCNPJ"
-                                placeholder="XX.XXX.XXX/0001-XX" required>
+                                placeholder="XX.XXX.XXX/0001-XX" th:field="*{empresa.cnpj}" required>
                             <div class="valid-feedback">
                                 CNPJ válido!
                             </div>
@@ -92,7 +94,7 @@
                             <label for="validationPassword">Senha</label>
                             <!--is-valid-->
                             <input type="password" class="form-control lightMode" id="validationPassword"
-                                placeholder="*******" required>
+                                placeholder="*******" th:field="*{senha}" required>
                             <div class="valid-feedback">
                                 Senha válida!
                             </div>
@@ -126,7 +128,7 @@
                             <label for="campoEmail">Email</label>
                             <!--is-valid-->
                             <input type="email" class="form-control lightMode" id="campoEmail"
-                                placeholder="email@exemplo.com.br" required>
+                                placeholder="email@exemplo.com.br" th:field="*{email}" required>
                             <div class="valid-feedback">
                                 Função válido!
                             </div>
@@ -137,17 +139,12 @@
                         </div>
                     </div>
 
-                    <div class="form-check" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                        <select th:field="*{roleAcess}">
-                          <option th:value="'ADMIN'" th:text="Acesso Administrador"></option>
-                          <option th:value="'USER'" th:text="Acesso Usuário" selected></option>
-                      </select>
-                      </div>
 
                     <div class="row mx-4 d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit">Cadastrar</button>
                     </div>
                 </form>
+                
             </div>
             <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
 </body>
