--- a/src/main/resources/templates/dash/dash.html
+++ b/src/main/resources/templates/dash/dash.html
@@ -29,7 +29,7 @@
     <div id="loader">
     </div>
     <div id="content">
-        <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+        <div th:insert="components/menuTamplate :: menuTamplate(tela='dash')"></div><!--MENU-->
 
         <div id="page-content-wrapper">
 
