--- a/src/main/resources/templates/clients/cadastroCliente.html
+++ b/src/main/resources/templates/clients/cadastroCliente.html
@@ -16,6 +16,7 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
     <script th:src="@{/js/bootstrap/bootstrap.bundle.js}" type="text/javascript"></script>
 
+
     <title id="Title">Cliente</title>
 </head>
 
@@ -42,6 +43,8 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nomeFantasia">Nome Fantasia</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="Nome fantasia também chamado nome de marca, nome comercial ou nome de fachada, é a designação popular de título de estabelecimento utilizada por uma instituição.">?</button>
                             <!--is-valid-->
                             <input type="text" class="form-control lightMode" id="nomeFantasia" placeholder="Empresa..."
                                 required>
@@ -58,6 +61,8 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nomeRasaoSocial">Nome Razão Social</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="Razão social é o termo registrado sob o qual uma pessoa jurídica (PJ) se individualiza e exerce suas atividades.">?</button>
                             <!--is-valid-->
                             <input type="text" class="form-control lightMode" id="nomeRasaoSocial"
                                 placeholder="Empresa..." required>
@@ -90,6 +95,8 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationSenha">Senha</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
                             <!--is-valid-->
                             <input type="password" class="form-control lightMode" id="validationSenha"
                                 placeholder="*******" required>
@@ -107,6 +114,8 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationSenhaConf">Confirme a Senha</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="A confirmação de senha deve ser igual a senha digitada">?</button>
                             <!--is-valid-->
                             <input type="password" class="form-control lightMode" id="validationSenhaConf"
                                 placeholder="*******" required>
@@ -124,6 +133,8 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationEmail">Email</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="Email de acesso do cliente.">?</button>
                             <!--is-valid-->
                             <input type="email" class="form-control lightMode" id="validationEmail"
                                 placeholder="email@exemplo.com.br" required>
@@ -140,7 +151,13 @@
 
                     <div class="row mx-4 d-flex">
                         <button class="btn btn-primary" type="submit">Cadastrar</button>
-                      </div>
+                    </div>
+                    <script>
+                        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+                        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+                            return new bootstrap.Popover(popoverTriggerEl)
+                        }) 
+                    </script>
                 </form>
             </div>
             <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
