--- a/src/main/resources/templates/clients/cadastroCliente.html
+++ b/src/main/resources/templates/clients/cadastroCliente.html
@@ -20,20 +20,21 @@
 </head>
 
 <body id="body-pd">
-    <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='cliente')"></div>
+    <!--MENU-->
 
     <div id="page-content-wrapper">
         <!--BODY da página-->
         <div class="m-4 pt-4">
             <div class="p-4 rounded-4 lightMode">
-                <form th:object="${empresa}" th:action="@{/cadastroCliente/save}" class="needs-validation" method="post" novalidate>
+                <form class="needs-validation" novalidate>
 
                     <div class="form-row">
                         <h1>Cadastro de Cliente</h1>
                     </div>
 
                     <div class="form-check p-3">
-                        <input th:field="*{ativo}" checked class="form-check-input " type="checkbox" id="ativoCheckBox">
+                        <input checked class="form-check-input " type="checkbox" id="ativoCheckBox">
                         <label class="form-check-label" for="ativoCheckBox">
                             Ativo
                         </label>
@@ -42,8 +43,10 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nomeFantasia">Nome Fantasia</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="Nome fantasia também chamado nome de marca, nome comercial ou nome de fachada, é a designação popular de título de estabelecimento utilizada por uma instituição.">?</button>
                             <!--is-valid-->
-                            <input th:field="*{nome}" type="text" class="form-control lightMode" id="nomeFantasia" placeholder="Empresa..."
+                            <input type="text" class="form-control lightMode" id="nomeFantasia" placeholder="Empresa..."
                                 required>
                             <div class="valid-feedback">
                                 Nome válido!
@@ -57,9 +60,11 @@
 
                     <div class="form-row">
                         <div class="col-md mb-3">
-                            <label for="nomeRazaoSocial">Nome Razão Social</label>
+                            <label for="nomeRasaoSocial">Nome Razão Social</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="Razão social é o termo registrado sob o qual uma pessoa jurídica (PJ) se individualiza e exerce suas atividades.">?</button>
                             <!--is-valid-->
-                            <input th:field="*{empresa.nomeRazaoSocial}" type="text" class="form-control lightMode" id="nomeRazaoSocial"
+                            <input type="text" class="form-control lightMode" id="nomeRasaoSocial"
                                 placeholder="Empresa..." required>
                             <div class="valid-feedback">
                                 Nome válido!
@@ -75,7 +80,7 @@
                         <div class="col-md mb-3">
                             <label for="validationCNPJ">CNPJ</label>
                             <!--is-valid-->
-                            <input th:field="*{empresa.cnpj}" type="text" class="form-control lightMode" id="validationCNPJ"
+                            <input type="text" class="form-control lightMode" id="validationCNPJ"
                                 placeholder="XX.XXX.XXX/0001-XX" required>
                             <div class="valid-feedback">
                                 CNPJ válido!
@@ -90,8 +95,10 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationSenha">Senha</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
                             <!--is-valid-->
-                            <input th:field="*{senha}" type="password" class="form-control lightMode" id="validationSenha"
+                            <input type="password" class="form-control lightMode" id="validationSenha"
                                 placeholder="*******" required>
                             <div class="valid-feedback">
                                 Senha válida!
@@ -107,6 +114,8 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationSenhaConf">Confirme a Senha</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="A confirmação de senha deve ser igual a senha digitada">?</button>
                             <!--is-valid-->
                             <input type="password" class="form-control lightMode" id="validationSenhaConf"
                                 placeholder="*******" required>
@@ -124,8 +133,10 @@
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="validationEmail">Email</label>
+                            <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
+                                data-bs-content="Email de acesso do cliente.">?</button>
                             <!--is-valid-->
-                            <input th:field="*{email}" type="email" class="form-control lightMode" id="validationEmail"
+                            <input type="email" class="form-control lightMode" id="validationEmail"
                                 placeholder="email@exemplo.com.br" required>
                             <div class="valid-feedback">
                                 Email válido!
@@ -140,7 +151,13 @@
 
                     <div class="row mx-4 d-flex">
                         <button class="btn btn-primary" type="submit">Cadastrar</button>
-                      </div>
+                    </div>
+                    <script>
+                        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+                        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+                            return new bootstrap.Popover(popoverTriggerEl)
+                        }) 
+                    </script>
                 </form>
             </div>
             <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
